# Porool

./: .gitignore  CMakeLists.txt  Makefile  POROOL.sexp  Porool_description.md  README.md  USAGE.md  porool.ini
docs/: readme.xml
docs/sample/: porool.ini  porool.ocfg  tharavu.ini  tharavu.ocfg
docs/sample/data/Legal/: ServiceAg.ovec
docs/sample/data/demo/: users.odat
docs/sample/data/phrasing/: chunk_markers.odat  query_prefixes.odat
docs/sample/data/porool/: vocab.ovoc
include/: porool.h  sorkuvai_dll.h
scr/: porool.c  porool_cli.c  porool_extract.c
src/: porool.c  porool_extract.c
src/include/: porool.h  porool_extract.h  sorkuvai_dll.h  tharavu_dll.h
src/tools/: porool_cli.c
test/: test_porool.c
